--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="icon" href="./img/favicon.ico" />
-        <title>Eric Yakubu</title>
-    </head>
-    <body>
-        <div id="root"></div>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="description" content="Portfolio of Eric Yakubu" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="./img/favicon.ico" />
+    <title>Eric Yakubu</title>
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
